# c_practice_2022

./: .gitignore  CMakeLists.txt  README.md  database.h  gmake.sh  rating.c  rating.h  records.txt  sorting.h  statuses.h  structs.h  tests.cc
docx/: algorithms.odg
